UI fix btn-link, visibility utility

--- a/templates/default/050-layout/_layout_visibility-utilities.scss
+++ b/templates/default/050-layout/_layout_visibility-utilities.scss
@@ -19,6 +19,7 @@
   td#{$parent}     { display: table-cell !important; }
 }
 
+.hidden,
 .visible-xs-block,
 .visible-xs-inline,
 .visible-xs-inline-block,
